err/ts3ekkomanage.err
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy_Utils-0.32.21.egg-info'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/docker'...
Listing './lib/python3.5/site-packages/docker/api'...
Listing './lib/python3.5/site-packages/docker/models'...
Listing './lib/python3.5/site-packages/docker/transport'...
Listing './lib/python3.5/site-packages/docker/types'...
Listing './lib/python3.5/site-packages/docker/utils'...
Listing './lib/python3.5/site-packages/docker-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/docker_pycreds-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/dockerpycreds'...
Listing './lib/python3.5/site-packages/flake8'...
Listing './lib/python3.5/site-packages/flake8/api'...
Listing './lib/python3.5/site-packages/flake8/formatting'...
Listing './lib/python3.5/site-packages/flake8/main'...
Listing './lib/python3.5/site-packages/flake8/options'...
Listing './lib/python3.5/site-packages/flake8/plugins'...
Listing './lib/python3.5/site-packages/flake8-3.5.0.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/mccabe-0.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pycodestyle-2.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pyflakes'...
Listing './lib/python3.5/site-packages/pyflakes/scripts'...
Listing './lib/python3.5/site-packages/pyflakes/test'...
Listing './lib/python3.5/site-packages/pyflakes-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/sqlalchemy_seed'...
Listing './lib/python3.5/site-packages/sqlalchemy_seed-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/functions'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/primitives'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/relationships'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/types'...
Listing './lib/python3.5/site-packages/ts3ekkomanage'...
Compiling './lib/python3.5/site-packages/ts3ekkomanage/manager.py'...
***   File "./lib/python3.5/site-packages/ts3ekkomanage/manager.py", line 52
    username=f'{self.instance_prop.base_username} {len(self.clients)+1}',
                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ts3ekkomanage-0.0.2.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
